# pyconkr-api-v3

./: .env.docker  .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  zappa_settings.py
.github/workflows/: lint.yaml  release.yaml
infra/: Dockerfile  docker-compose.dev.yaml
pyconkr/: api.py  health_check.py  requirements.txt  settings.py  urls.py  wsgi.py
pyconkr/pyconkr/: asgi.py  settings.py  urls.py
